# rkifield

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/rkf-animation/: Cargo.toml
crates/rkf-animation/shaders/: joint_rebake.wgsl
crates/rkf-animation/src/: blend_shape.rs  character.rs  clip.rs  lib.rs  player.rs  rebake.rs  segment.rs  skeleton.rs
crates/rkf-convert/: Cargo.toml
crates/rkf-convert/src/: main.rs
crates/rkf-core/: Cargo.toml
crates/rkf-core/examples/: gen_test_rkf.rs
crates/rkf-core/src/: aabb.rs  asset_file.rs  asset_file_tests.rs  asset_file_v3.rs  automation.rs  brick.rs  brick_geometry.rs  brick_map.rs  brick_pool.rs  bvh.rs  cell_state.rs  chunk.rs  clipmap.rs  companion.rs  constants.rs  lib.rs  lod.rs  lod_manager.rs  material.rs  material_library.rs  populate.rs  resample.rs  sampling.rs  scene.rs  scene_node.rs  sdf.rs  sdf_cache.rs  sdf_compute.rs  sparse_grid.rs  surface_flood.rs  terrain.rs  transform_bake.rs  transform_flatten.rs  voxel.rs  voxelize_object.rs  world_position.rs
crates/rkf-core/src/automation/: mod.rs  stub.rs  tests.rs  trait_def.rs  types.rs
crates/rkf-edit/: Cargo.toml
crates/rkf-edit/shaders/: csg_edit.wgsl
crates/rkf-edit/src/: brush.rs  cpu_apply.rs  edit_op.rs  geometry_edit.rs  journal.rs  lib.rs  pipeline.rs  transform_ops.rs  types.rs  undo.rs
crates/rkf-editor/: Cargo.toml
crates/rkf-editor/src/: animation_preview.rs  automation.rs  camera.rs  debug_viz.rs  editor_command.rs  editor_config.rs  editor_state.rs  eikonal_repair.rs  eikonal_repair.wgsl  engine.rs  engine_loop.rs  engine_loop_commands.rs  engine_loop_edits.rs  engine_loop_io.rs  engine_loop_play.rs  engine_loop_store.rs  engine_loop_ui.rs  engine_viewport.rs  environment.rs  event_bridge.rs  gizmo.rs  input.rs  jfa_sdf.rs  jfa_sdf.wgsl  light_editor.rs  line.wgsl  main.rs  overlay.rs  overlay_blit.rs  paint.rs  placement.rs  properties.rs  scene_io.rs  scene_tree.rs  sculpt.rs  tool_routing_bridge.rs  ui_snapshot.rs  undo.rs  wireframe.rs
crates/rkf-editor/src/automation/: api_behavior.rs  api_helpers.rs  api_impl.rs  api_methods_v2.rs  mod.rs  rinch_debug_client.rs  tests.rs
crates/rkf-editor/src/editor_state/: impl_state.rs  mod.rs  slider_signals.rs  tests.rs
crates/rkf-editor/src/engine/: brick_ops.rs  brick_ops_repair.rs  eikonal.rs  environment.rs  file_loading.rs  init.rs  mod.rs  offscreen.rs  offscreen_render.rs  paint.rs  query.rs  render.rs  sculpt.rs  sdf_fmm.rs  sdf_repair.rs
crates/rkf-editor/src/gizmo/: mod.rs  tests.rs
crates/rkf-editor/src/layout/: mod.rs  operations.rs  panel_registry.rs  state.rs
crates/rkf-editor/src/scene_io/: mod.rs  save.rs
crates/rkf-editor/src/store/: actions.rs  mod.rs  path.rs  register_actions.rs  routing.rs  signals.rs  types.rs
crates/rkf-editor/src/ui/: asset_browser.rs  brush_palette.rs  camera_properties.rs  component_inspector.rs  debug_panel.rs  environment_panel.rs  library_panel.rs  light_properties.rs  loading_modal.rs  material_properties.rs  materials_panel.rs  mod.rs  (+13 more)
crates/rkf-game/: Cargo.toml
crates/rkf-game/src/: main.rs  showcase.rs
crates/rkf-import/: Cargo.toml
crates/rkf-import/src/: animated_chunk.rs  bvh.rs  lib.rs  lod.rs  material_transfer.rs  mesh.rs  segment_voxelize.rs  skeleton_extract.rs  voxelize.rs
crates/rkf-import/tests/: obj_pipeline_test.rs
crates/rkf-macros/: Cargo.toml
crates/rkf-macros/src/: component_helpers.rs  lib.rs
crates/rkf-macros/tests/: system_macro.rs
crates/rkf-mcp/: Cargo.toml
crates/rkf-mcp/src/: bridge.rs  ipc.rs  lib.rs  main.rs  protocol.rs  registry.rs
crates/rkf-particles/: Cargo.toml
crates/rkf-particles/shaders/: particle_bin.wgsl  particle_micro_sdf.wgsl  particle_screen.wgsl  particle_simulate.wgsl  particle_volumetric.wgsl
crates/rkf-particles/src/: binning.rs  collision_v2.rs  emitter.rs  lib.rs  micro_object.rs  particle.rs  screen_space.rs  simulate.rs  volumetric.rs
crates/rkf-physics/: Cargo.toml
crates/rkf-physics/src/: character_controller.rs  destruction.rs  lib.rs  playground.rs  rapier_world.rs  rigid_body.rs  sdf_collision.rs
crates/rkf-render/: Cargo.toml
crates/rkf-render/shaders/: auto_exposure.wgsl  blit.wgsl  bloom.wgsl  bloom_composite.wgsl  cloud_shadow.wgsl  clouds.wgsl  color_grade.wgsl  cosmetics.wgsl  debug_view.wgsl  dof.wgsl  god_rays_blur.wgsl  material_preview_march.wgsl  motion_blur.wgsl  preview_shade.wgsl  radiance_inject.wgsl  radiance_mip.wgsl  ray_march.wgsl  sdf_common.wgsl  shade.wgsl  shade_common.wgsl  shade_common_shading.wgsl  shade_main.wgsl  shade_pbr.wgsl  sharpen.wgsl  temporal_upscale.wgsl  terrain_eval.wgsl  tile_cull.wgsl  tile_object_cull.wgsl  tone_map.wgsl  vol_composite.wgsl  vol_march.wgsl  vol_shadow.wgsl  vol_temporal.wgsl  vol_upscale.wgsl
crates/rkf-render/src/: auto_exposure.rs  blit.rs  bloom.rs  bloom_composite.rs  brick_clouds.rs  brush_overlay.rs  camera.rs  clipmap_gpu.rs  cloud_shadow.rs  clouds.rs  coarse_field.rs  color_grade.rs  context.rs  cosmetics.rs  debug_view.rs  dlss.rs  dof.rs  fog.rs  fog_volume.rs  gbuffer.rs  god_rays.rs  god_rays_blur.rs  gpu_brick_maps.rs  gpu_bvh.rs  gpu_color_pool.rs  gpu_object.rs  gpu_profiler.rs  gpu_scene.rs  history.rs  lib.rs  light.rs  material_preview.rs  material_table.rs  motion_blur.rs  post_process.rs  radiance_inject.rs  radiance_mip.rs  radiance_volume.rs  ray_march.rs  shader_composer.rs  (+12 more)
crates/rkf-runtime/: Cargo.toml
crates/rkf-runtime/src/: asset_registry.rs  async_io.rs  components.rs  config.rs  double_buffer.rs  edge_cases.rs  environment.rs  file_watcher.rs  frame.rs  game_manager.rs  lib.rs  lru_eviction.rs  main_camera.rs  material_reload.rs  memory_audit.rs  object_streaming.rs  object_streaming_tests.rs  preset_validator.rs  procgen.rs  profiler.rs  project.rs  save_system.rs  scene.rs  scene_file.rs  scene_manager.rs  shader_reload.rs  streaming.rs  streaming_budget.rs  stress_test.rs  terrain_streaming.rs  transform_system.rs
crates/rkf-runtime/tests/: streaming_world.rs
crates/rkf-testbed/: Cargo.toml
crates/rkf-testbed/src/: automation.rs  main.rs
(+154 files in other folders)
