[workspace]
resolver = "2"
members = [
    "crates/rkf-core",
    "crates/rkf-render",
    "crates/rkf-animation",
    "crates/rkf-edit",
    "crates/rkf-import",
    "crates/rkf-physics",
    "crates/rkf-particles",
    "crates/rkf-runtime",
    "crates/rkf-mcp",
    "crates/rkf-editor",
    "crates/rkf-convert",
    "crates/rkf-game",
    "crates/rkf-testbed",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# External dependencies
wgpu = "27"
winit = "0.30"
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1", features = ["derive"] }
encase = { version = "0.10", features = ["glam"] }
hecs = "0.10"
rapier3d = "0.22"
log = "0.4"
env_logger = "0.11"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz4_flex = "0.11"
anyhow = "1"
half = { version = "2", features = ["bytemuck"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
image = "0.25"
clap = { version = "4", features = ["derive"] }
gltf = "1"
rayon = "1"
tobj = "4"
base64 = "0.22"
pollster = "0.4"
rinch = { git = "https://github.com/joeleaver/rinch.git", features = ["desktop", "components", "theme", "debug"] }
rinch-platform = { git = "https://github.com/joeleaver/rinch.git" }

# Internal crate cross-references
rkf-core = { path = "crates/rkf-core" }
rkf-render = { path = "crates/rkf-render" }
rkf-animation = { path = "crates/rkf-animation" }
rkf-edit = { path = "crates/rkf-edit" }
rkf-import = { path = "crates/rkf-import" }
rkf-physics = { path = "crates/rkf-physics" }
rkf-particles = { path = "crates/rkf-particles" }
rkf-runtime = { path = "crates/rkf-runtime" }
rkf-mcp = { path = "crates/rkf-mcp" }

# Patch wgpu to use the same fork as rinch (Rgba8Unorm storage texture fix)
[patch.crates-io]
wgpu = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
wgpu-core = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
wgpu-hal = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
wgpu-types = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
naga = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
