[workspace]
resolver = "2"
members = [
    "crates/rkf-macros",
    "crates/rkf-core",
    "crates/rkf-render",
    "crates/rkf-animation",
    "crates/rkf-edit",
    "crates/rkf-import",
    "crates/rkf-physics",
    "crates/rkf-particles",
    "crates/rkf-runtime",
    "crates/rkf-mcp",
    "crates/rkf-editor",
    "crates/rkf-convert",
    "crates/rkf-game",
    "crates/rkf-testbed",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joeleaver/rkifield"

[workspace.dependencies]
# External dependencies
wgpu = "27"
winit = "0.31.0-beta.2"
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1", features = ["derive"] }
encase = { version = "0.10", features = ["glam"] }
hecs = "0.10"
rapier3d = "0.22"
log = "0.4"
env_logger = "0.11"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz4_flex = "0.11"
anyhow = "1"
half = { version = "2", features = ["bytemuck"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
image = "0.25"
clap = { version = "4", features = ["derive"] }
gltf = { version = "1", features = ["KHR_texture_transform"] }
rayon = "1"
tobj = "4"
base64 = "0.22"
pollster = "0.4"
crossbeam = "0.8"
arc-swap = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Rinch dependencies (from upstream git)
rinch = { git = "ssh://git@github.com/joeleaver/rinch.git", default-features = false }
rinch-core = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-macros = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-renderer = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-theme = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-components = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-tabler-icons = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-dom = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-editor = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-editor-macros = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-editor-components = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-debug = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-editable = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-platform = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-web = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-video = { git = "ssh://git@github.com/joeleaver/rinch.git" }
rinch-clipboard = { git = "ssh://git@github.com/joeleaver/rinch.git" }
stylo_taffy = { git = "ssh://git@github.com/joeleaver/rinch.git" }

# Rinch external deps
anyrender = "0.7"
anyrender_vello = "0.7"
vello = "0.7"
muda = "0.15"
tray-icon = "0.19"
ksni = { version = "0.3", default-features = false, features = ["blocking", "tokio"] }
rfd = "0.15"
arboard = "3"
parley = { git = "https://github.com/linebender/parley", rev = "f6a8485c35367b581b03bd6da55c8465f24e16ef" }
stylo = "0.11"
stylo_traits = "0.11"
stylo_dom = "0.11"
stylo_atoms = "0.11"
stylo_config = "0.11"
servo_arc = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7"
inventory = "0.3"
peniko = "0.6"
keyboard-types = "0.7"
png = "0.17"
futures-util = "0.3"
tempfile = "3"
libloading = "0.8"

# Internal crate cross-references
rkf-macros = { path = "crates/rkf-macros" }
rkf-core = { path = "crates/rkf-core" }
rkf-render = { path = "crates/rkf-render" }
rkf-animation = { path = "crates/rkf-animation" }
rkf-edit = { path = "crates/rkf-edit" }
rkf-import = { path = "crates/rkf-import" }
rkf-physics = { path = "crates/rkf-physics" }
rkf-particles = { path = "crates/rkf-particles" }
rkf-runtime = { path = "crates/rkf-runtime" }
rkf-mcp = { path = "crates/rkf-mcp" }

# Patch wgpu to use the same fork as rinch (Rgba8Unorm storage texture fix)
[patch.crates-io]
wgpu = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
wgpu-core = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
wgpu-hal = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
wgpu-types = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
naga = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
# Patch winit to use the same fork as rinch (Wayland DnD support)
winit = { git = "https://github.com/joeleaver/winit-fork", branch = "rinch-patch" }
winit-core = { git = "https://github.com/joeleaver/winit-fork", branch = "rinch-patch" }
winit-common = { git = "https://github.com/joeleaver/winit-fork", branch = "rinch-patch" }
winit-wayland = { git = "https://github.com/joeleaver/winit-fork", branch = "rinch-patch" }
winit-x11 = { git = "https://github.com/joeleaver/winit-fork", branch = "rinch-patch" }
dpi = { git = "https://github.com/joeleaver/winit-fork", branch = "rinch-patch" }
