[package]
name = "rkf-animation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Skeletal animation and blend shapes for the RKIField SDF engine"

[dependencies]
rkf-core = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
