[package]
name = "rkf-edit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Procedural editing operations for the RKIField SDF engine"

[dependencies]
rkf-core = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
