[package]
name = "rkf-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "RKIField editor application"

[[bin]]
name = "rkf-editor"
path = "src/main.rs"

[dependencies]
rkf-core = { workspace = true }
rkf-runtime = { workspace = true }
rkf-render = { workspace = true }
rkf-edit = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
