[package]
name = "rkf-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "RKIField editor application"

[[bin]]
name = "rkf-editor"
path = "src/main.rs"

[dependencies]
rkf-core = { workspace = true }
rkf-runtime = { workspace = true }
rkf-render = { workspace = true }
rkf-edit = { workspace = true }
rkf-mcp = { workspace = true }
rkf-animation = { workspace = true }
rkf-physics = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
rinch = { workspace = true, features = ["desktop", "components", "theme"] }
rinch-platform = { workspace = true }
rinch-tabler-icons = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
hecs = { workspace = true }
rfd = "0.15"
