[package]
name = "rkf-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Proc macros for the RKIField behavior system: #[component] and #[system]"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
rkf-runtime = { workspace = true }
