[package]
name = "rkf-physics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Physics integration and SDF collision for the RKIField engine"

[dependencies]
rkf-core = { workspace = true }
glam = { workspace = true }
rapier3d = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
